fix footer spacing and scrolltop

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -4,9 +4,9 @@
   background: white;
   color: black;
   z-index: 10;
-  -webkit-box-shadow: 0 4px 6px 3px #999;
-  -moz-box-shadow: 0 4px 6px 3px #999;
-  box-shadow: 0 4px 6px 3px #999;
+  -webkit-box-shadow: 0 -0.5px 0.5px 0px #bbb;
+  -moz-box-shadow: 0 -0.5px 0.5px 0px #bbb;
+  box-shadow: 0 -0.5px 0.5px 0px #bbb;
   display: flex;
   justify-content: center;
   align-items: center;
