--- a/app/assets/stylesheets/stone_index.scss
+++ b/app/assets/stylesheets/stone_index.scss
@@ -3,6 +3,7 @@
   margin: auto;
   max-width: 84.125em;
   min-width: 28.125em;
+  padding-bottom: 70px;
 }
 
 .stone-index-list {
