--- a/app/assets/stylesheets/stone_show.scss
+++ b/app/assets/stylesheets/stone_show.scss
@@ -1,4 +1,5 @@
 .stone-show {
+  padding-bottom: 70px;
 }
 
 .rock-image-description {
